Change code chunk color

--- a/_extensions/baylor_theme/custom.scss
+++ b/_extensions/baylor_theme/custom.scss
@@ -127,7 +127,7 @@ h2::after.title {
 // code blocks
 .reveal div.sourceCode pre code {
 	font-size: 100%;
-	background-color: #A1A1A1;
+	background-color: #efefef;
 }
 
 // code output
