fix .def command

--- a/_extensions/baylor_theme/custom.scss
+++ b/_extensions/baylor_theme/custom.scss
@@ -24,7 +24,7 @@ $body-bg: #fefefe !default;
 $body-color: #000 !default;
 $selection-bg: #134e13;
 $baylor_green: #134e13;
-$university-gold: #FFB81C
+$university-gold: #FFB81C;
 $gray70: #b3b3b3;
 
 .subtext {
