--- a/_extensions/baylor_theme/custom.scss
+++ b/_extensions/baylor_theme/custom.scss
@@ -157,9 +157,10 @@ h2::after.title {
 
 .def {
 	// border: 2px solid $university-gold;
+	width: 90%;
 	border-radius: 6px !important;
 	padding: 10px;
-	margin: 5px;
+	margin: auto;
 	background-color: #eeeeee;
 }
 
