--- a/_extensions/baylor_theme/custom.scss
+++ b/_extensions/baylor_theme/custom.scss
@@ -67,7 +67,8 @@ $gray70: #b3b3b3;
 	border: none;
 	background-color: $baylor_green;
 	color: #000;
-	height: 5px;
+	height: 2px;
+	border-radius: 4px;
 	width: 100%;
 }
 
